logs/hiver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hiver'...
Listing './lib/python3.5/site-packages/hiver/fb303'...
Listing './lib/python3.5/site-packages/hiver/fb303_scripts'...
Compiling './lib/python3.5/site-packages/hiver/fb303_scripts/fb303_simple_mgmt.py'...
***   File "./lib/python3.5/site-packages/hiver/fb303_scripts/fb303_simple_mgmt.py", line 58
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hiver/hive_metastore'...
Compiling './lib/python3.5/site-packages/hiver/hive_metastore/ThriftHiveMetastore.py'...
***   File "./lib/python3.5/site-packages/hiver/hive_metastore/ThriftHiveMetastore.py", line 3179
    except AlreadyExistsException, o1:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hiver/hive_serde'...
Listing './lib/python3.5/site-packages/hiver/hive_service'...
Compiling './lib/python3.5/site-packages/hiver/hive_service/ThriftHive.py'...
***   File "./lib/python3.5/site-packages/hiver/hive_service/ThriftHive.py", line 345
    except HiveServerException, ex:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hiver/queryplan'...
Listing './lib/python3.5/site-packages/hiver-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
